--- a/src/modules/navigation/components/top-nav-user/top-nav-user.component.html
+++ b/src/modules/navigation/components/top-nav-user/top-nav-user.component.html
@@ -7,9 +7,10 @@
                 <div class="dropdown-user-details-email">{{ user.email }}</div>
             </div>
         </h6>
-        <div class="dropdown-divider"></div>
+        <!--<div class="dropdown-divider"></div>
+            @TODO: Eliminar
         <a class="dropdown-item" routerLink="/dashboard">Settings</a><a class="dropdown-item" routerLink="/dashboard">Activity Log</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" routerLink="/dashboard">Logout</a>
+        <div class="dropdown-divider"></div>-->
+        <a class="dropdown-item" routerLink="/dashboard">Cerrar Sesión</a>
     </div>
 </li>
