--- a/src/modules/auth/containers/login/login.component.html
+++ b/src/modules/auth/containers/login/login.component.html
@@ -3,7 +3,14 @@
         <div class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Iniciar Sesión</h3></div>
+                    <div class="card-header pt-4">
+                        <span class="">
+                            <h3 class="text-center font-weight-light">
+                                <b>Reparamos</b>
+                            </h3>
+                            <h3 class="text-center font-weight-light">Iniciar Sesión</h3>
+                        </span>
+                    </div>
                     <div class="card-body">
                         <form>
                             <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Usuario</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Usuario" /></div>
@@ -16,7 +23,7 @@
                                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" routerLink="/auth/forgot-password">Forgot Password?</a><a class="btn btn-primary" routerLink="/dashboard">Login</a></div>
                             -->
                             <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                <a class="btn btn-primary" routerLink="/dashboard">Login</a>
+                                <a class="btn btn-primary" routerLink="/dashboard">Iniciar sesión</a>
                             </div>
                         </form>
                     </div>
