--- a/src/styles/layout/_authentication.scss
+++ b/src/styles/layout/_authentication.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-size: contain;
+  background: url(https://www.ferrestardecolombia.com/wp-content/uploads/2020/07/ferreteria.jpg);
+  background-position: center;
   #layoutAuthentication_content {
     min-width: 0;
     flex-grow: 1;
