--- a/src/modules/auth/containers/login/login.component.html
+++ b/src/modules/auth/containers/login/login.component.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="small mb-1" for="inputPassword">Contraseña</label>
-                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Contraseña" formControlName="pwd" />
+                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Contraseña" formControlName="password" />
                             </div>
                             <!-- 
                                 @TODO: Eliminar
