--- a/src/modules/navigation/containers/side-nav/side-nav.component.html
+++ b/src/modules/navigation/containers/side-nav/side-nav.component.html
@@ -9,6 +9,6 @@
     </div>
     <div class="sb-sidenav-footer">
         <div class="small">Inicio sesión como:</div>
-        <span *ngIf="userService.user$ | async as user">{{user.firstName}} {{user.lastName}}</span>
+        <span *ngIf="userService.user$ | async as user">{{user.user}}</span>
     </div>
 </nav>
