--- a/src/modules/auth/containers/login/login.component.html
+++ b/src/modules/auth/containers/login/login.component.html
@@ -15,11 +15,11 @@
                         <form [formGroup]="userForm" (ngSubmit)="authUser()">
                             <div class="form-group">
                                 <label class="small mb-1" for="inputEmailAddress" >Usuario</label>
-                                <input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Usuario" formControlName="User" />
+                                <input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Usuario" formControlName="user" />
                             </div>
                             <div class="form-group">
                                 <label class="small mb-1" for="inputPassword">Contraseña</label>
-                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Contraseña" formControlName="Password" />
+                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Contraseña" formControlName="password" />
                             </div>
                             <!-- 
                                 @TODO: Eliminar
