--- a/src/modules/tables/containers/gestion-clientes/gestion-clientes.component.html
+++ b/src/modules/tables/containers/gestion-clientes/gestion-clientes.component.html
@@ -34,7 +34,7 @@
                     <tr *ngFor="let client of clients">
                         <th scope="row">{{ client.id }}</th>
                         <td>{{ client.address }}</td>
-                        <td>{{ client.fullName }}</td>
+                        <td>{{ client.firstName }} {{ client.surname }}</td>
                         <td>{{ client.documentTypeCode }}</td>
                         <td>{{ client.document }}</td>
                         <td>{{ client.dateBirth }}</td>
@@ -56,25 +56,85 @@
 
 <ng-template #content let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+      <h4 class="modal-title" id="modal-basic-title">{{ modalLabels.title }}</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
-      <form>
+      <form [formGroup]="clientForm" (ngSubmit)="sendForm()">
         <div class="form-group">
-          <label for="dateOfBirth">Date of birth</label>
-          <div class="input-group">
-            <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+          <div class="row">
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Primer Nombre</label>
+              <div class="input-group">
+                <input id="firstName" name="firstName" formControlName="firstName" class="form-control" placeholder="Tu nombre">
+              </div>
+            </div>
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Segundo Nombre</label>
+              <div class="input-group">
+                <input id="secondName" name="secondName" formControlName="secondName" class="form-control" placeholder="Segundo nombre">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Primer apellido</label>
+              <div class="input-group">
+                <input id="surname" name="surname" formControlName="surname" class="form-control" placeholder="Primer apellido">
+              </div>
+            </div>
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Segundo Apellido</label>
+              <div class="input-group">
+                <input id="secondSurname" name="secondSurname" formControlName="secondSurname" class="form-control" placeholder="Segundo Apellido">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Tipo de documento</label>
+              <div class="input-group">
+                <select name="documentTypeId" id="documentTypeId" formControlName="documentTypeId"  class="form-control">
+                  <option [value]="documentType.id" *ngFor="let documentType of documentTypes; trackBy:identify">{{ documentType.documentType }}</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">documento</label>
+              <div class="input-group">
+                <input id="document" name="document" formControlName="document" class="form-control" placeholder="Tu documento">
+              </div>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="dateOfBirth">Fecha de Nacimiento</label>
+            <div class="input-group">
+              <input id="dateBirth" name="dateBirth" formControlName="dateBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Teléfono</label>
+              <div class="input-group">
+                <input id="phoneNumber" name="phoneNumber" formControlName="phoneNumber" class="form-control" placeholder="Tu Telefono">
+              </div>
+            </div>
+            <div class="col-sm mb-3">
+              <label for="dateOfBirth">Direccion</label>
+              <div class="input-group">
+                <input id="address" name="address" formControlName="address" class="form-control" placeholder="Tu Direccion">
+              </div>
             </div>
           </div>
         </div>
+        <button type="submit" [disabled]="clientForm.invalid" class="btn btn-outline-dark">
+          {{ modalLabels.title}}
+        </button>
       </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
     </div>
 </ng-template>
