Implementacion de crud de creacion de pacientes

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -24,3 +24,12 @@ body {
 .field-mandatory {
   color: red;
 }
+
+.input-group.has-error {
+  border: 1px solid red;
+}
+.field-error {
+  font-size: 11px;
+  display: flex;
+  color: red;
+}
