--- a/src/modules/tables/containers/gestion-clientes/gestion-clientes.component.html
+++ b/src/modules/tables/containers/gestion-clientes/gestion-clientes.component.html
@@ -67,68 +67,149 @@
           <div class="row">
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Primer Nombre <span class="field-mandatory">*</span> </label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.firstName.dirty && clientForm.controls.firstName.invalid }">
                 <input id="firstName" name="firstName" formControlName="firstName" class="form-control" placeholder="Tu nombre">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.firstName.dirty && clientForm.controls.firstName.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.firstName.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.firstName.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Segundo Nombre</label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.secondName.dirty && clientForm.controls.secondName.invalid }">
                 <input id="secondName" name="secondName" formControlName="secondName" class="form-control" placeholder="Segundo nombre">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.secondName.dirty && clientForm.controls.secondName.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.secondName.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.secondName.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
           </div>
           <div class="row">
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Primer apellido <span class="field-mandatory">*</span></label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.surname.dirty && clientForm.controls.surname.invalid }">
                 <input id="surname" name="surname" formControlName="surname" class="form-control" placeholder="Primer apellido">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.surname.dirty && clientForm.controls.surname.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.surname.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.surname.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Segundo Apellido</label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.secondSurname.dirty && clientForm.controls.secondSurname.invalid }">
                 <input id="secondSurname" name="secondSurname" formControlName="secondSurname" class="form-control" placeholder="Segundo Apellido">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.secondSurname.dirty && clientForm.controls.secondSurname.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.secondSurname.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.secondSurname.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
           </div>
           <div class="row">
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Tipo de documento <span class="field-mandatory">*</span></label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.documentTypeId.dirty && clientForm.controls.documentTypeId.invalid }">
                 <select name="documentTypeId" id="documentTypeId" formControlName="documentTypeId"  class="form-control">
                   <option [value]="documentType.id" *ngFor="let documentType of documentTypes; trackBy:identify">{{ documentType.documentType }}</option>
                 </select>
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.documentTypeId.dirty && clientForm.controls.documentTypeId.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.documentTypeId.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.documentTypeId.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
             <div class="col-sm mb-3">
               <label for="dateOfBirth">documento <span class="field-mandatory">*</span></label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.document.dirty && clientForm.controls.document.invalid }">
                 <input id="document" name="document" formControlName="document" class="form-control" placeholder="Tu documento">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.document.dirty && clientForm.controls.document.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.document.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.document.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
           </div>
           <div class="mb-3">
             <label for="dateOfBirth">Fecha de Nacimiento <span class="field-mandatory">*</span></label>
-            <div class="input-group">
+            <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.dateBirth.dirty && clientForm.controls.dateBirth.invalid }">
               <input id="dateBirth" name="dateBirth" formControlName="dateBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.dateBirth.dirty && clientForm.controls.dateBirth.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.dateBirth.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.dateBirth.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
           </div>
           <div class="row">
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Teléfono <span class="field-mandatory">*</span></label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.phoneNumber.dirty && clientForm.controls.phoneNumber.invalid }">
                 <input id="phoneNumber" name="phoneNumber" formControlName="phoneNumber" class="form-control" placeholder="Tu Telefono">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.phoneNumber.dirty && clientForm.controls.phoneNumber.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.phoneNumber.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.phoneNumber.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
             <div class="col-sm mb-3">
               <label for="dateOfBirth">Direccion <span class="field-mandatory">*</span></label>
-              <div class="input-group">
+              <div class="input-group" 
+                [ngClass]="{'has-error': clientForm.controls.address.dirty && clientForm.controls.address.invalid }">
                 <input id="address" name="address" formControlName="address" class="form-control" placeholder="Tu Direccion">
               </div>
+              <span class="field-error" *ngIf="clientForm.controls.address.dirty && clientForm.controls.address.invalid">
+                <span class="field-error-required" *ngIf="clientForm.controls.address.errors?.required">
+                  El campo debe de ser Requerido
+                </span> 
+                <span class="field-error-maxlength" *ngIf="clientForm.controls.address.errors?.maxlength">
+                  No Cumple con el maximo requerido
+                </span> 
+              </span> 
             </div>
           </div>
         </div>
