--- a/src/modules/navigation/components/side-nav-item/side-nav-item.component.html
+++ b/src/modules/navigation/components/side-nav-item/side-nav-item.component.html
@@ -3,4 +3,6 @@
     {{sideNavItem.text}}
     <div class="sb-sidenav-collapse-arrow"><fa-icon class="ml-auto" *ngIf="sideNavItem.submenu" [icon]="['fas', 'angle-down']"></fa-icon></div
 ></a>
-<nav class="sb-sidenav-menu-nested nav" *ngIf="sideNavItem.submenu &amp;&amp; expanded"><sb-side-nav-item class="submenu" *ngFor="let submenuItem of sideNavItem.submenu" [sideNavItem]="submenuItem"></sb-side-nav-item></nav>
+<nav class="sb-sidenav-menu-nested nav" *ngIf="sideNavItem.submenu &amp;&amp; expanded">
+    <sb-side-nav-item class="submenu" *ngFor="let submenuItem of sideNavItem.submenu" [sideNavItem]="submenuItem"></sb-side-nav-item>
+</nav>
